# python_package_template

./: .buildinfo  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/: constants.doctree  ducks.doctree
.github/workflows/: unit_tests.yml
.streamlit/: config.toml
mypkg/: app.py  utils.py
mypkg/cli/: main.py  sub.py
tests/: test_utils.py
